feat: add login and credits

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
+# GEMINI IA
 NEXT_PUBLIC_STUDIOAI_API_KEY=
+
+# FIREBASE
+NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_AUTH_DOMAIN=
+NEXT_PUBLIC_PROJECT_ID=
+
+# FIREBASE DATABASE
+NEXT_PUBLIC_DATABASE_URL=
